--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
                 <li class="header-link-contacts-list">
                     <a class="header-link-style-contacts" href="mailto:info@devstudio.com">
                         <svg class="link-contacts-envelope">
-                    <use href="./icons/sprite.svg#icon-envelope"> </use>
+                    <use class="header-link-contacts-icon" href="./icons/sprite.svg#icon-envelope"> </use>
                 </svg> info@devstudio.com
                     </a>
                 </li>
                 <li class="header-link-contacts-list">
                     <a class="header-link-style-contacts" href="telto:+380961111111"> <svg class="link-contacts-smartphone">
-                    <use href="./icons/sprite.svg#icon-smartphone" > </use>
+                    <use class="header-link-contacts-icon" href="./icons/sprite.svg#icon-smartphone" > </use>
                 </svg> +38 096 111 11 11</a>
                 </li>
             </ul>
