--- a/portfolio.html
+++ b/portfolio.html
@@ -18,20 +18,21 @@
                 <a class="header-title" href="./index.html"><span class="header-title-color">Web</span><span class="header-title-color-b">Studio</span></a>
                 <ul class="menu header-list">
                     <li class="header-link"><a class="header-link-style " href="./index.html">Студия</a></li>
-                    <li class="header-link"><a class="header-link-style current " href="./portfolio.html">Портфолио</a></li>
+                    <li class="header-link"><a class="header-link-style current" href="./portfolio.html">Портфолио</a></li>
                     <li class="header-link"><a class="header-link-style " href="#">Контакты</a></li>
                 </ul>
             </nav>
             <ul class="header-link-contacts">
                 <li class="header-link-contacts-list">
                     <a class="header-link-style-contacts" href="mailto:info@devstudio.com">
-                        <svg class="link-contacts-envelope">
+                        <svg class="link-contacts-envelope" width=16 height=12>
                     <use class="header-link-contacts-icon" href="./icons/sprite.svg#icon-envelope"> </use>
                 </svg> info@devstudio.com
                     </a>
                 </li>
                 <li class="header-link-contacts-list">
-                    <a class="header-link-style-contacts" href="telto:+380961111111"> <svg class="link-contacts-smartphone">
+                    <a class="header-link-style-contacts" href="telto:+380961111111">
+                        <svg class="link-contacts-smartphone" width=10 height=16>
                     <use class="header-link-contacts-icon" href="./icons/sprite.svg#icon-smartphone" > </use>
                 </svg> +38 096 111 11 11</a>
                 </li>
@@ -53,69 +54,97 @@
     <section class="list-offers-section">
         <div class="container">
             <ul class="list-container">
-                <li class="list-offers"><img src="./image/portfolio/img1.jpg" width="370" height="294" alt="Картинка 1">
-                    <div class="list-offers-border">
-                        <h3 class="section-title-portf">Технокряк</h3>
-                        <p class="section-title-par">Веб-сайт</p>
-                    </div>
+                <li class="list-offers">
+                    <a href="#" class="list-offers-link">
+                        <img src="./image/portfolio/img1.jpg" width="370" height="294" alt="Картинка 1">
+                        <div class="list-offers-border">
+                            <h3 class="section-title-portf">Технокряк</h3>
+                            <p class="section-title-par">Веб-сайт</p>
+                        </div>
+                    </a>
                 </li>
-                <li class="list-offers"><img src="./image/portfolio/img2.jpg" width="370" height="294" alt="Картинка 1">
-                    <div class="list-offers-border">
-                        <h3 class="section-title-portf">Постер New Orlean vs Golden Star</h3>
-                        <p class="section-title-par">Дизайн</p>
-                </li>
-
-                <li class="list-offers"><img src="./image/portfolio/img3.jpg" width="370" height="294" alt="Картинка 1">
-                    <div class="list-offers-border">
-                        <h3 class="section-title-portf">Ресторан Seafood</h3>
-                        <p class="section-title-par">Приложение</p>
-                    </div>
-                </li>
-
-                <li class="list-offers"><img src="./image/portfolio/img4.jpg" width="370" height="294" alt="Картинка 1">
-                    <div class="list-offers-border">
-                        <h3 class="section-title-portf">Проект Prime</h3>
-                        <p class="section-title-par">Маркетинг</p>
-                    </div>
+                <li class="list-offers">
+                    <a href="#" class="list-offers-link">
+                        <img src="./image/portfolio/img2.jpg" width="370" height="294" alt="Картинка 1">
+                        <div class="list-offers-border">
+                            <h3 class="section-title-portf">Постер New Orlean vs Golden Star</h3>
+                            <p class="section-title-par">Дизайн</p>
+                        </div>
+                    </a>
                 </li>
 
-                <li class="list-offers"><img src="./image/portfolio/img5.jpg" width="370" height="294" alt="Картинка 1">
-                    <div class="list-offers-border">
-                        <h3 class="section-title-portf">Проект Boxes</h3>
-                        <p class="section-title-par">Приложение</p>
-                    </div>
+                <li class="list-offers">
+                    <a href="#" class="list-offers-link">
+                        <img src="./image/portfolio/img3.jpg" width="370" height="294" alt="Картинка 1">
+                        <div class="list-offers-border">
+                            <h3 class="section-title-portf">Ресторан Seafood</h3>
+                            <p class="section-title-par">Приложение</p>
+                        </div>
+                    </a>
                 </li>
 
-                <li class="list-offers"><img src="./image/portfolio/img6.jpg" width="370" height="294" alt="Картинка 1">
-                    <div class="list-offers-border">
-                        <h3 class="section-title-portf">Inspiration has no Borders</h3>
-                        <p class="section-title-par">Веб-сайт</p>
-                    </div>
+                <li class="list-offers">
+                    <a href="#" class="list-offers-link">
+                        <img src="./image/portfolio/img4.jpg" width="370" height="294" alt="Картинка 1">
+                        <div class="list-offers-border">
+                            <h3 class="section-title-portf">Проект Prime</h3>
+                            <p class="section-title-par">Маркетинг</p>
+                        </div>
+                    </a>
                 </li>
 
-                <li class="list-offers"><img src="./image/portfolio/img7.jpg" width="370" height="294" alt="Картинка 1">
-                    <div class="list-offers-border">
-                        <h3 class="section-title-portf">Издание Limited Edition</h3>
-                        <p class="section-title-par">Дизайн</p>
-                    </div>
+                <li class="list-offers">
+                    <a href="#" class="list-offers-link">
+                        <img src="./image/portfolio/img5.jpg" width="370" height="294" alt="Картинка 1">
+                        <div class="list-offers-border">
+                            <h3 class="section-title-portf">Проект Boxes</h3>
+                            <p class="section-title-par">Приложение</p>
+                        </div>
+                    </a>
                 </li>
 
-                <li class="list-offers"><img src="./image/portfolio/img8.jpg" width="370" height="294" alt="Картинка 1">
-                    <div class="list-offers-border">
-                        <h3 class="section-title-portf">Проект LAB</h3>
-                        <p class="section-title-par">Маркетинг</p>
-                    </div>
+                <li class="list-offers">
+                    <a href="#" class="list-offers-link">
+                        <img src="./image/portfolio/img6.jpg" width="370" height="294" alt="Картинка 1">
+                        <div class="list-offers-border">
+                            <h3 class="section-title-portf">Inspiration has no Borders</h3>
+                            <p class="section-title-par">Веб-сайт</p>
+                        </div>
+                    </a>
+                </li>
+
+                <li class="list-offers">
+                    <a href="#" class="list-offers-link">
+                        <img src="./image/portfolio/img7.jpg" width="370" height="294" alt="Картинка 1">
+                        <div class="list-offers-border">
+                            <h3 class="section-title-portf">Издание Limited Edition</h3>
+                            <p class="section-title-par">Дизайн</p>
+                        </div>
+                    </a>
+                </li>
+
+                <li class="list-offers">
+                    <a href="#" class="list-offers-link">
+                        <img src="./image/portfolio/img8.jpg" width="370" height="294" alt="Картинка 1">
+                        <div class="list-offers-border">
+                            <h3 class="section-title-portf">Проект LAB</h3>
+                            <p class="section-title-par">Маркетинг</p>
+                        </div>
+                    </a>
                 </li>
 
 
-                <li class="list-offers"><img src="./image/portfolio/img9.jpg" width="370" height="294" alt="Картинка 1">
-                    <div class="list-offers-border">
-                        <h3 class="section-title-portf">Growing Business</h3>
-                        <p class="section-title-par">Приложение</p>
-                    </div>
+                <li class="list-offers">
+                    <a href="#" class="list-offers-link">
+                        <img src="./image/portfolio/img9.jpg" width="370" height="294" alt="Картинка 1">
+                        <div class="list-offers-border">
+                            <h3 class="section-title-portf">Growing Business</h3>
+                            <p class="section-title-par">Приложение</p>
+                        </div>
+                    </a>
                 </li>
             </ul>
-            </div>
+        </div>
     </section>
     </div>
     <footer class="footer">
@@ -130,7 +159,7 @@
                     </ul>
                 </div>
             <div class="footer-icons-container">
-                <h2 class="footer-title-svg">Присоединяйтесь</h2>
+                <h3 class="footer-title-svg">Присоединяйтесь</h3>
                 <ul class="social-icons">
                     <li class="social-icons-item">
                         <a href="#" class="footer-social-icons-link">
@@ -160,10 +189,10 @@
                                 </svg>
                         </a>
                     </li>
-                        </ul>
-                        </div>
-                    </div>
-                </address>
+                </ul>
+            </div>
+        </div>
+    </address>
             <footer>
 </body>
 
