--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <nav>
                 <a class="header-title" href="./index.html"><span class="header-title-color">Web</span><span class="header-title-color-b">Studio</span></a>
                 <ul class="menu header-list">
-                    <li class="header-link"><a class="header-link-style current" href="./index.html">Студия</a></li>
+                    <li class="header-link"><a class="header-link-style current " href="./index.html">Студия</a></li>
                     <li class="header-link"><a class="header-link-style " href="./portfolio.html">Портфолио</a></li>
                     <li class="header-link"><a class="header-link-style " href="#">Контакты</a></li>
                 </ul>
@@ -25,15 +25,15 @@
             <ul class="header-link-contacts">
                 <li class="header-link-contacts-list">
                     <a class="header-link-style-contacts" href="mailto:info@devstudio.com">
-                        <svg class="link-contacts-envelope" width=16 height=12>
-                    <use class="header-link-contacts-icon" href="./icons/sprite.svg#icon-envelope"> </use>
+                        <svg class="link-contacts-envelope header-link-contacts-icon" width=16 height=12>
+                    <use  href="./icons/sprite.svg#icon-envelope"> </use>
                 </svg> info@devstudio.com
                     </a>
                 </li>
                 <li class="header-link-contacts-list">
                     <a class="header-link-style-contacts" href="telto:+380961111111">
-                        <svg class="link-contacts-smartphone" width=10 height=16>
-                    <use class="header-link-contacts-icon" href="./icons/sprite.svg#icon-smartphone" > </use>
+                        <svg class="link-contacts-smartphone header-link-contacts-icon" width=10 height=16>
+                    <use href="./icons/sprite.svg#icon-smartphone" > </use>
                 </svg> +38 096 111 11 11</a>
                 </li>
             </ul>
@@ -258,43 +258,43 @@
                 <h2 class="regular-customers-title">Постоянные клиенты</h2>
                 <ul class="regular-customers-list">
                     <li class="regular-customers-item-list">
-                        <a href="" class="regular-customers-item-link"><svg class="regular-icons-svg">
-                        <use class="regular-icons-svg-use" href="./icons/sprite.svg#icon-client"></use>
+                        <a href="" class="regular-customers-item-link regular-icons-svg-use"><svg class="regular-icons-svg">
+                        <use href="./icons/sprite.svg#icon-client"></use>
                     </svg>
                 </a>
                     </li>
                     <li class="regular-customers-item-list">
-                        <a href="" class="regular-customers-item-link">
+                        <a href="" class="regular-customers-item-link regular-icons-svg-use">
                             <svg class="regular-icons-svg">
-                                <use class="regular-icons-svg-use" href="./icons/sprite.svg#icon-client2"></use>
+                                <use href="./icons/sprite.svg#icon-client2"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="regular-customers-item-list">
-                        <a href="" class="regular-customers-item-link">
+                        <a href="" class="regular-customers-item-link regular-icons-svg-use">
                             <svg class="regular-icons-svg">
-                                <use class="regular-icons-svg-use" href="./icons/sprite.svg#icon-client3"></use>
+                                <use href="./icons/sprite.svg#icon-client3"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="regular-customers-item-list">
-                        <a href="" class="regular-customers-item-link">
+                        <a href="" class="regular-customers-item-link regular-icons-svg-use">
                             <svg class="regular-icons-svg">
-                        <use class="regular-icons-svg-use" href="./icons/sprite.svg#icon-client4"></use>
+                        <use href="./icons/sprite.svg#icon-client4"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="regular-customers-item-list">
-                        <a href="" class="regular-customers-item-link">
+                        <a href="" class="regular-customers-item-link regular-icons-svg-use">
                             <svg class="regular-icons-svg">
-                        <use class="regular-icons-svg-use" href="./icons/sprite.svg#icon-client5"></use>
+                        <use href="./icons/sprite.svg#icon-client5"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="regular-customers-item-list">
-                        <a href="" class="regular-customers-item-link">
+                        <a href="" class="regular-customers-item-link regular-icons-svg-use">
                             <svg class="regular-icons-svg">
-                        <use class="regular-icons-svg-use" href="./icons/sprite.svg#icon-client6"></use>
+                        <use href="./icons/sprite.svg#icon-client6"></use>
                             </svg>
                         </a>
                     </li>
@@ -304,15 +304,16 @@
     </main>
     <footer class="footer">
         <div class="container">
-            <address class="footer-adress">
-                <div class="footer-adress-container">
+            <div class="footer-adress-container">
+                <address class="footer-adress">
                     <a class="footer-title" href="./index.html"><span class="footer-title-color">Web</span><span class="footer-title-color-w">Studio</span></a>
                     <ul>
                         <li class="footer-list"><a  class="footer-li-map" href="https://goo.gl/maps/kzve8S5sdwJXSWWp6" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a></li>
                         <li class="footer-list"><a  class="footer-li"href="telto:+380961111111">+38 099 111 11 11</a></li>
                         <li class="footer-list"><a  class="footer-li" href="mailto:info@devstudio.com">info@example.com</a></li>
                     </ul>
-                </div>
+                </address>
+            </div>
             <div class="footer-icons-container">
                 <h3 class="footer-title-svg">Присоединяйтесь</h3>
                 <ul class="social-icons">
@@ -347,8 +348,8 @@
                 </ul>
             </div>
         </div>
-    </address>
-            <footer>
+
+        <footer>
 </body>
 
 </html>
