--- a/portfolio.html
+++ b/portfolio.html
@@ -25,15 +25,15 @@
             <ul class="header-link-contacts">
                 <li class="header-link-contacts-list">
                     <a class="header-link-style-contacts" href="mailto:info@devstudio.com">
-                        <svg class="link-contacts-envelope" width=16 height=12>
-                    <use class="header-link-contacts-icon" href="./icons/sprite.svg#icon-envelope"> </use>
+                        <svg class="link-contacts-envelope header-link-contacts-icon" width=16 height=12>
+                    <use  href="./icons/sprite.svg#icon-envelope"> </use>
                 </svg> info@devstudio.com
                     </a>
                 </li>
                 <li class="header-link-contacts-list">
                     <a class="header-link-style-contacts" href="telto:+380961111111">
-                        <svg class="link-contacts-smartphone" width=10 height=16>
-                    <use class="header-link-contacts-icon" href="./icons/sprite.svg#icon-smartphone" > </use>
+                        <svg class="link-contacts-smartphone header-link-contacts-icon" width=10 height=16>
+                    <use href="./icons/sprite.svg#icon-smartphone" > </use>
                 </svg> +38 096 111 11 11</a>
                 </li>
             </ul>
@@ -149,15 +149,16 @@
     </div>
     <footer class="footer">
         <div class="container">
-            <address class="footer-adress">
-                <div class="footer-adress-container">
+            <div class="footer-adress-container">
+                <address class="footer-adress">
                     <a class="footer-title" href="./index.html"><span class="footer-title-color">Web</span><span class="footer-title-color-w">Studio</span></a>
                     <ul>
                         <li class="footer-list"><a  class="footer-li-map" href="https://goo.gl/maps/kzve8S5sdwJXSWWp6" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a></li>
                         <li class="footer-list"><a  class="footer-li"href="telto:+380961111111">+38 099 111 11 11</a></li>
                         <li class="footer-list"><a  class="footer-li" href="mailto:info@devstudio.com">info@example.com</a></li>
                     </ul>
-                </div>
+                </address>
+            </div>
             <div class="footer-icons-container">
                 <h3 class="footer-title-svg">Присоединяйтесь</h3>
                 <ul class="social-icons">
@@ -192,8 +193,8 @@
                 </ul>
             </div>
         </div>
-    </address>
-            <footer>
+
+        <footer>
 </body>
 
 </html>
